--- a/templates/chat/room.html
+++ b/templates/chat/room.html
@@ -11,6 +11,7 @@
     <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css'>
     <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.2/css/font-awesome.min.css'>
     <link rel="stylesheet" href="{% static 'style.css' %}" />
+    <link rel="shortcut icon" href="http://www.iconarchive.com/download/i86037/graphicloads/100-flat-2/chat-2.ico" />
     <title>Chat App</title>
   </head>
   <body>
